test/fails/bad_casts/functions10.lgl
tag coord a is vec2;
tag coord b is vec2;
tag coord c is vec2;
tag coord d is vec3;

canon `t _collapse<`t : vec2>(d v) {
    d->`t m [[1., 0., 0.], [0., 0., 1.]];
    return v in `t; // we can't use 'in' cause we don't allow it for the abstract `t atm
}

void main() {
    print 1;
}